# sbemoored

./: .gitignore  HISTORY.md  HISTORY.rst  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
sbemoored/: __init__.py  sbe37.py  sbe56.py
src/sbemoored/: __init__.py  sbe37.py  sbe56.py
tests/: conftest.py  test_sbemoored.py
tests/data/: SBE05600422_2020-10-08.csv  SBE37_12712_NISKINE.cnv  SBE37_12712_NISKINE.xmlcon  SBE37_2864_NISKINE.cnv
